<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina x Etanol</string>
    <string name="txt_Gasolina">$ Gasolina</string>
    <string name="txt_Etanol">$ Etanol</string>
    <string name="txt_telefone">Telefone\n</string>
    <string name="txt_tipo_de_curso">Tipo curso</string>
    <string name="button_tipo_de_curso">Button_tipo_de_curso</string>
    <string name="Selecione_o_curso">Selecione_Curso</string>
    <string name="button_enviar">Enviar</string>
    <string name="Enviar">Enviar\n</string>
    <string name="Limpar">Limpar\n</string>
    <string name="Salvar">Salvar</string>
    <string name="Calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="enviar">Enviar</string>
    <string name="Resultado"> RESULTADO</string>
    <string name="todo">TODO</string>
    <string name="Imagem">TODO</string>
</resources>