<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_telefone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context="devandroid.gabriel.appGasEta.View.GasEtaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_titulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="24dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_Gasolina"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="TopoDoConteudo"
                    android:ems="10"
                    android:hint="@string/txt_Gasolina"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@string/txt_Gasolina" />

                <EditText
                    android:id="@+id/txt_Etanol"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="Entrada_Sobrenome"
                    android:ems="10"
                    android:hint="@string/txt_Etanol"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@string/txt_Etanol" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/button_Calcular"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/Calcular" />

            <TextView
                android:id="@+id/nome_resultado"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"

                android:text="@string/Resultado"
                android:textAlignment="center"
                android:textDirection="firstStrongLtr"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:visibility="visible" />


            <Button
                android:id="@+id/button_Salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/Salvar" />

            <Button
                android:id="@+id/button_Limpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/limpar" />


            <Button
                android:id="@+id/button_Enviar"
                android:layout_width="269dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/enviar"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>